# RUSB

./: Cargo.toml  LICENSE  Makefile  README.md  load.sh  picture.rgb
src/: main.rs  rboot.rs  rconfig.rs  rcore.rs  rgraphics.rs  rhandler.rs  uefi_alloc.rs
